--- a/code/docker-node/templates/run-img.sh.tmpl
+++ b/code/docker-node/templates/run-img.sh.tmpl
@@ -2,24 +2,41 @@
 {{$docker_user :=getv "/env/docker_user" "guest"}}
 {{$docker_pwd :=getv "/env/docker_pwd" "guest"}}
 {{$docker_pull_url :=getv "/env/docker_pull_url"}}
+{{$docker_upgrade_url :=getv "/env/docker_upgrade_url"}}
 {{$docker_run_cmd :=getv "/env/docker_run_cmd"}}
 {{$docker_vol :=getv "/env/docker_vol"}}
 {{$docker_port :=getv "/env/docker_port"}}
+{{if gt ( len ( $docker_upgrade_url ) ) 0}}docker_url={{$docker_upgrade_url}}{{else}}docker_url={{$docker_pull_url}}{{end}}
+login_attempt=3
+login_succeed=false
+while [ "$login_attempt" -gt 0 ]
+do
+  if docker login -u {{$docker_user}} -p {{$docker_pwd}} $docker_url | grep Succeeded
+  then
+    login_succeed=true
+    break
+  else
+    login_attempt=$[$login_attempt-1]
+  fi
+done
+if [ login_succeed == "false" ]
+then
+  exit 1
+fi
 
-docker login -u {{$docker_user}} -p {{$docker_pwd}} {{$docker_pull_url}}
-docker pull {{$docker_pull_url}}
+docker pull $docker_url
 loop=60
 while [ "$loop" -gt 0 ]
 do
-  image_record=`docker images -a |awk '{print $1":"$2}'|grep {{$docker_pull_url}}`
-  if [ -n $image_record ]
+  #image_record=`docker images -a |awk '{print $1":"$2}'|grep $docker_url`
+  if docker images -a |awk '{print $1":"$2}'|grep $docker_url
   then
-    loop=0
+    break
   else
     sleep 30s
   fi
 done
-/opt/docker/bin/docker-restart.sh
-docker run -d -e TZ=Asia/Shanghai -p 80:{{$docker_port}}  -v /data/docker_data:{{$docker_vol}} {{$docker_pull_url}} {{$docker_run_cmd}}
+
+docker run -d -e TZ=Asia/Shanghai -p 80:{{$docker_port}}  -v /data/docker_data:{{$docker_vol}} $docker_url {{$docker_run_cmd}}
 
 
