--- a/code/docker-node/templates/upgrade-img.sh.tmpl
+++ b/code/docker-node/templates/upgrade-img.sh.tmpl
@@ -8,19 +8,34 @@
 
 docker ps | awk '{print $1}' | grep -v 'none' | grep -iv 'container' | xargs -n1 docker rm -f
 
-docker login -u {{$docker_user}} -p {{$docker_pwd}} {{$docker_upgrade_url}}
+login_attempt=3
+login_succeed=false
+while [ "$login_attempt" -gt 0 ]
+do
+  if docker login -u {{$docker_user}} -p {{$docker_pwd}} {{$docker_upgrade_url}} | grep Succeeded
+  then
+    login_succeed=true
+    break
+  else
+    login_attempt=$[$login_attempt-1]
+  fi
+done
+if [ login_succeed == "false" ]
+then
+  exit 1
+fi
+
 docker pull {{$docker_upgrade_url}}
 loop=60
 while [ "$loop" -gt 0 ]
 do
-  image_record=`docker images -a |awk '{print $1":"$2}'|grep $docker_url`
-  if [ -n "image_record" ]
+  #image_record=`docker images -a |awk '{print $1":"$2}'|grep {{$docker_upgrade_url}}`
+  if docker images -a |awk '{print $1":"$2}'|grep {{$docker_upgrade_url}}
   then
-    loop=0
+    break
   else
     sleep 30s
   fi
 done
 
-/opt/docker/bin/docker-restart.sh
 docker run -d -e TZ=Asia/Shanghai -p 80:{{$docker_port}}  -v /data/docker_data:{{$docker_vol}} {{$docker_upgrade_url}} {{$docker_run_cmd}}
