--- a/config/cluster.json.mustache
+++ b/config/cluster.json.mustache
@@ -8,7 +8,7 @@
              "container": {
                  "type": "kvm",
                  "zone": "pek3a",
-                 "image": "img-qkgw9eqj"
+                 "image": "img-p2z8cp0f"
              },
              "loadbalancer": {{cluster.docker_node.loadbalancer}},
              "instance_class": {{cluster.docker_node.instance_class}},
@@ -24,10 +24,12 @@
              "vertical_scaling_policy": "sequential",
              "services": {
              	 "init": {
+                    "order": 1,
              	 	"cmd": "/opt/docker/bin/init-docker.sh"
              	 },
                  "start": {
-                    "cmd": "/opt/docker/bin/start-docker.sh;/opt/docker/bin/run-img.sh"
+                    "order": 1,
+                    "cmd": "/opt/docker/bin/start-docker.sh && /opt/docker/bin/run-img.sh"
                  },
                  "restart": {
                    "cmd": "/opt/docker/bin/restart-docker.sh"
@@ -47,7 +49,7 @@
                 "healthy_threshold": 2,
                 "unhealthy_threshold": 2,
                 "check_cmd": "/opt/docker/bin/check-health.sh",
-                "action_cmd": "/opt/docker/bin/restart-docker.sh;/opt/docker/bin/run-img.sh"
+                "action_cmd": "/opt/docker/bin/restart-docker.sh && /opt/docker/bin/run-img.sh"
             },
              "advanced_actions": ["scale_horizontal"]
          },
@@ -74,7 +76,7 @@
              	 	"cmd": "/opt/docker/bin/init-docker.sh"
              	 },
                  "start": {
-                    "cmd": "/opt/docker/bin/start-docker.sh;/opt/docker/bin/run-img.sh"
+                    "cmd": "/opt/docker/bin/start-docker.sh && /opt/docker/bin/run-img.sh"
                  },
                  "restart": {
                    "cmd": "/opt/docker/bin/restart-docker.sh"
@@ -91,7 +93,7 @@
                 "healthy_threshold": 2,
                 "unhealthy_threshold": 2,
                 "check_cmd": "docker ps | awk '{print $2}' | grep -v 'none' | grep -iv 'container' | grep fluent",
-                "action_cmd": "/opt/docker/bin/restart-docker.sh;/opt/docker/bin/run-img.sh"
+                "action_cmd": "/opt/docker/bin/restart-docker.sh && /opt/docker/bin/run-img.sh"
             },
              "user_access": true
          }
