fix tag issue and enhance util script

--- a/code/docker-node/templates/daemon.json.tmpl
+++ b/code/docker-node/templates/daemon.json.tmpl
@@ -3,6 +3,7 @@
 {{$docker_pull_url :=getv "/env/docker_pull_url"}}
 {{$is_upgrade_secure :=getv "/env/is_upgrade_secure"}}
 {{$docker_upgrade_url :=getv "/env/docker_upgrade_url"}}
+{{$this_inst_id :=getv "/host/instance_id"}}
 {
   {{if gt ( len ( $docker_mirror_location ) ) 0}}
   "registry-mirrors": ["{{$docker_mirror_location}}"],
@@ -11,7 +12,7 @@
   {{range $dir := lsdir "/hosts/client_node/"}}{{$client_node_ip := printf "/hosts/client_node/%s/ip" $dir}}{{$client_inst_id := printf "/hosts/client_node/%s/instance_id" $dir}}
   "log-opts": {
     "fluentd-address": "{{getv $client_node_ip}}:24224",
-    "tag": "{{getv $client_inst_id}}"
+    "tag": "{{$this_inst_id}}"
   },
   {{end}}
   {{if eq $is_pull_secure "no"}}{{$pull_parms := split $docker_pull_url "/"}}
