--- a/config/cluster.json.mustache
+++ b/config/cluster.json.mustache
@@ -8,7 +8,7 @@
              "container": {
                  "type": "kvm",
                  "zone": "pek3a",
-                 "image": "img-qj0dh69r"
+                 "image": "img-opow00b6"
              },
              "loadbalancer": {{cluster.docker_node.loadbalancer}},
              "instance_class": {{cluster.docker_node.instance_class}},
@@ -59,7 +59,7 @@
              "container": {
                  "type": "kvm",
                  "zone": "pek3a",
-                 "image": "img-uza0mapy"
+                 "image": "img-kmq8fqwk"
              },
              "instance_class": {{cluster.client_node.instance_class}},
              "count": 1,
