--- a/code/docker-node/templates/docker-util.sh.tmpl
+++ b/code/docker-node/templates/docker-util.sh.tmpl
@@ -1,12 +1,16 @@
 #!/bin/bash
-docker_user=$1
-docker_pwd=$2
-docker_url=$3
-
+{{$docker_user :=getv "/env/docker_user"}}{{$docker_pwd :=getv "/env/docker_pwd"}}{{$docker_pull_url :=getv "/env/docker_pull_url"}}{{$docker_upgrade_url :=getv "/env/docker_upgrade_url"}}
+{{if gt ( len ( $docker_upgrade_url ) ) 0}}docker_url={{$docker_upgrade_url}}{{else}}docker_url={{$docker_pull_url}}{{end}}
+docker_user={{$docker_user}}
+docker_pwd={{$docker_pwd}}
 function docker_login(){
   docker login -u $docker_user -p $docker_pwd $docker_url
 }
 function verify_login(){
+  if [ $docker_user=="" ]
+  then
+    return 0
+  fi
   login_attempt=3
   login_succeed=false
   while [ "$login_attempt" -gt 0 ]
@@ -22,7 +26,7 @@ function verify_login(){
   if [ $login_succeed == "false" ]
   then
     #echo "fail to login"
-    exit 1
+    return 1
   fi
 }
 function check_fluentd(){
