--- a/config/cluster.json.mustache
+++ b/config/cluster.json.mustache
@@ -59,7 +59,7 @@
              "container": {
                  "type": "kvm",
                  "zone": "pek3a",
-                 "image": "img-8uvmmvu8"
+                 "image": "img-ubnr8tdc"
              },
              "instance_class": {{cluster.client_node.instance_class}},
              "count": 1,
