update image id

--- a/config/cluster.json.mustache
+++ b/config/cluster.json.mustache
@@ -11,7 +11,7 @@
              "container": {
                  "type": "kvm",
                  "zone": "pek3a",
-                 "image": "img-rvxioph6"
+                 "image": " img-odqzdal3"
              },
              "loadbalancer": {{cluster.docker_node.loadbalancer}},
              "instance_class": {{cluster.docker_node.instance_class}},
@@ -62,7 +62,7 @@
              "container": {
                  "type": "kvm",
                  "zone": "pek3a",
-                 "image": "img-6zxcqf5x"
+                 "image": " img-odqzdal3"
              },
              "instance_class": {{cluster.client_node.instance_class}},
              "count": 1,
